# music-stand

./: .gitignore  CMakeLists.txt  CMakePresets.json  dev.sh
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
qt-ex/qml-multipage/: CMakeLists.txt  PdfApplication.cpp  PdfApplication.hpp  main.cpp  viewer.qml  viewer.qrc
qt-ex/qml-paint/: CMakeLists.txt  ColorSquare.qml  main.cpp  viewer.qml
qt-ex/qml-single-page/: CMakeLists.txt  main.cpp  viewer.qml  viewer.qrc
qt-ex/widget-viewer/: CMakeLists.txt  MainWindow.hpp  SearchResultDelegate.cpp  SearchResultDelegate.hpp  ZoomSelector.cpp  ZoomSelector.hpp  main.cpp
src/: CMakeLists.txt  application.qml  main.cpp
src/music_stand/: Application.cpp  Application.hpp
src/widget-viewer-ex/: CMakeLists.txt  MainWindow.cpp
